# dot-filter

./: Args.hs  Main.hs  Makefile  dot-filter.cabal  stack.yaml
