name:                dot-filter
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/andreyk0/dot-filter#readme
license:             BSD3
license-file:        LICENSE
author:              Andrey Kartashov
maintainer:          andrey.kartashov@google.com
copyright:           Copyright: (c) 2016 Andrey Kartashov
category:            CLI
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dot-filter
  hs-source-dirs:      .

  main-is:             Main.hs

  other-modules:       Args

  build-depends:       base
                     , aeson
                     , bytestring
                     , conduit
                     , conduit-extra
                     , containers
                     , filepath
                     , gitrev
                     , graphviz
                     , optparse-applicative
                     , text
                     , transformers
                     , unordered-containers

  default-language:    Haskell2010

  ghc-options:         -Wall -threaded

